--- a/cloud-guru/developer-associate/s3.md
+++ b/cloud-guru/developer-associate/s3.md
@@ -5,7 +5,8 @@
 * it's object storage and it's really for files, images, webpages and that kind of thing.
 * it's also super scalable and allows you to store and retrieve any amount of data from anywhere on the web at a very
   low cost.
-* S3 is **object based** storage so it manages it data as objects rather than in file systems like an operating system or in
+* S3 is **object based** storage so it manages it data as objects rather than in file systems like an operating system
+  or in
   data blocks.
 * you can upload any type of file that you can think of to S3.
     * For example, photos, videos, code, documents and text files.
@@ -66,3 +67,98 @@
         * S3 bucket policies specify which actions are allowed or denied.
         * For example, you can use a bucket policy to allow a user named Alice to put but not delete objects within a
           bucket that you own.
+
+## Reviewing s3 Storage Classes
+
+* S3 Standard:
+    * Data stored redundantly across multi devices in multi facilities.
+        * Data will store >= 3 availability zones
+    * Gets 99,99% availability
+    * Gets 99,99999...% 11 9 durability
+    * Perfect for frequently accessed data
+    * It is designed to be suitable for most workloads,
+    * it is the default storage class.
+    * use cases include things like websites, content distribution, mobile and gaming applications, and big data
+      analytics.
+* S3 Standard-Infrequent Access:
+    * this is designed for infrequently access data,
+        * so data that you store can be accessing few times in a month but not daily bases
+    * designed for rapid access
+        * it can be use less frequently but requires to access rapid
+    * there's a low per gigabyte storage price and a per gigabyte retrieval fee.
+    * Use cases include long-term storage, backups, and disaster recovery files.
+    * min storage duration is 30 days
+    * Gets 99,99% availability
+    * Gets 99,99999...% 11 9 durability
+    * Data will store >= 3 availability zones
+* S3 One zone-Infrequent Access:
+    * Same as S3 infrequent Access storage but stored redundantly within a single availability zone instead of being
+      stored in multiple availability zones.
+    * Cost effective because it will cost less 20% than S3 Infrequent Access
+    * It is great long-live infrequently non-critical data
+    * Gets 99,95% availability because of one zone availability
+    * Gets 99,99999...% 11 9 durability
+* S3 Glacier:
+    * very cheap and cost effect storage
+    * optimised for data that is very infrequently access
+    * you pay fee when you access data and only use for archiving
+    * retrieval time is between 1 minute to 12 hours
+    * great for historical data that you will reach few times in a year
+    * min storage 90 days
+    * Gets 99,99% availability
+    * Gets 99,99999...% 11 9 durability
+    * Data will store >= 3 availability zones
+* S3 Glacier Deep Archive:
+    * archiving rarely access data within 12 hours retrieval time
+    * for example financial data that needs to access once or twice in a year or never, but you still need to store them
+      because compliance purpose
+    * min 180 days storage requires.
+    * Gets 99,99% availability
+    * Gets 99,99999...% 11 9 durability
+    * Data will store >= 3 availability zones
+* S3 Intelligent Tier:
+    * When we need to access data frequently or non-frequently, we can use
+    * has 2 tiers frequently and infrequently
+    * with Intelligent-Tiering, S3 will automatically move your data to the most cost-effective tier based on how
+      frequently you access each object.
+    * This is great for optimizing your costs and they do charge you an additional monthly fee,
+        * but it's a really small fee of $0.0025 per 1,000 objects, so the fee is negligible.
+    * Gets 99,9% availability
+    * Gets 99,99999...% 11 9 durability
+    * Data will store >= 3 availability zones
+* ![S3 Storage Classes Summary](img/s3-2.png)
+
+## Securing s3 buckets
+
+* Secure by default:
+    * all newly created buckets are completely private
+    * only the bucket owner can upload/delete etc the files
+    * No access on public by default
+* Control Access to Bucket
+    * Bucket Policy - bucket level:
+        * it allows to give permission to pther users for some actions via defining policy
+        * you can setup access control your buckets by define bucket policies
+        * permissions granted by the policy are going to apply to all of the objects within the bucket.
+        * not applying permissions to individual objects
+        * you cannot attach a bucket policy to an individual object
+        * it's not fine-grained access control
+        * they are really useful.
+            * If you have a group of files in the same bucket and they need to be accessed by the same people.
+        * bucket policies are written in JSON,!
+        * [Bucket policy](img/s3-3.png)
+    * Bucket Access Control Lists(ACLs) - object level:
+        * Access Control Lists are applied at an object level.
+            * So this means that we can apply different permissions for different objects within the same bucket.
+        * using Access Control Lists, we can grant different types of access to different objects within our bucket.
+        * And we can define which accounts and groups are granted access and also the type of access.
+            * For example, read, write or full control.
+        * it's bucket ACLs which give you the fine-grained access control for objects within your S3 buckets. So you can
+          grant a different type of access to different objects within the same bucket.
+            * For example, you can apply different permissions for different objects for different users and groups.
+* Access Logs:
+    * these are not enabled by default but you can go in and enable S3 access logs.
+    * this will log all of the requests made to your S3 buckets.
+        * For example, every time a user makes a request to upload a file, read a file or delete a file.
+
+* Object Lock: 
+  * Store objects using an write-once-read-many(Worm) model to prevent object being delete or overriten for a fix amount of time.
