s3 encr bucket notes

--- a/cloud-guru/developer-associate/s3.md
+++ b/cloud-guru/developer-associate/s3.md
@@ -160,5 +160,64 @@
     * this will log all of the requests made to your S3 buckets.
         * For example, every time a user makes a request to upload a file, read a file or delete a file.
 
-* Object Lock: 
-  * Store objects using an write-once-read-many(Worm) model to prevent object being delete or overriten for a fix amount of time.
+* Object Lock:
+    * Store objects using an write-once-read-many(Worm) model to prevent object being delete or overriten for a fix
+      amount of time.
+
+## S3 Encryption
+
+* Encryption in transit:
+    * means encrypting the data when you were sending it to and from your S3 buckets
+        * SSL/TLS Transport Layer Security:
+            * if you see SSL or TLS, then just know that that is encryption in transit
+        * HTTPS:
+            * typically that means we are using HTTPS to upload and download files between our local system and S3
+* Encryption at rest - server-side encryption:
+    * SSE-S3:
+        * encrypts your data using encryption keys managed by S3.
+        * each object is encrypted using its own unique key.
+        * And as an additional step, they also encrypt the key itself with a master key, which they rotate for you.
+        * Amazon manages the keys for you, so you don't need to worry about managing your own keys.
+        * it uses AES 256-bit encryption, so Advanced Encryption Standard 256-bit.
+        * this is very easy to enable
+        * you can do that while you are uploading a file and you can also encrypt existing files as well
+    * SSE-KMS:
+        * this is with the AWS Key Management Service.
+        * AWS manage the keys for you, but KMS comes with some additional benefits.
+        * So firstly, you get separate permissions for the use of an additional key called an envelope key.
+        * And that is a key which actually encrypts your data's encryption key.
+        * So it gives you an added level of protection against unauthorized access.
+        * And you also get an audit trail, which records the use of your encryption key.
+        * And you can see when your key has been used, who used it, and what they did.
+    * SSE-C:
+        * which uses an encryption key that you provide yourself.
+        * And this is where AWS manage the encryption and decryption activities, but you manage your own keys.
+        * So that means you are in charge of administering the keys, rotating them, and the lifecycle of the keys as
+          well.
+* Encryption at rest - Client side Encryption:
+    * this is where you encrypt the files yourself before uploading them into S3.
+
+* you may have a requirement to enforce server-side encryption for any files stored in S3. how can you do that?
+    * firstly, we can use the console.
+        * can select the encryption setting on the S3 bucket
+          and that is really the easiest way to do it and it's just a checkbox in the console
+    * Bucket Policy:
+        * every time a file is uploaded to S3, a PUT request is initiated,
+        * the file is going to be transmitted into S3. So in this case, it's going to use HTTP.
+        * hen expect 100-continue. This just tells S3 not to send your request body until it receives an
+          acknowledgement. So that means that S3 can actually reject your message based on the contents of this header.
+        * if the file is to be encrypted at upload time, then a special parameter will be included in the PUT request
+          header.
+            * ` x-amz-server-side` header parameter, 2 options in here
+                * `x-amz-server-side encryption: AES256` : that is with S3 managed keys
+                * `x-amz-server-side encryption: aws:kms` : this uses SSE-KMS, which uses KMS managed keys.
+        * when this parameter is included in the header of the PUT request, it tells S3 to encrypt the object at the
+          time of upload using the specified encryption method.
+            * ![Put mrssage](img/s2-enc-1.png)
+        * you can create a Bucket Policy which denies any S3 PUT request, which does not include this parameter in the
+          request header.
+        * this example policy explicitly denies any requests that are not using AWS Secure Transport.
+        * So that means with this policy, S3 will only serve content over HTTPS SSL, and it will deny all unencrypted
+          HTTP access.
+            * ![bucket policy](img/s2-enc-2.png)
+* ![Exam tips](img/s2-enc-3.png)
