--- a/cloud-guru/developer-associate/s3.md
+++ b/cloud-guru/developer-associate/s3.md
@@ -221,3 +221,12 @@
           HTTP access.
             * ![bucket policy](img/s2-enc-2.png)
 * ![Exam tips](img/s2-enc-3.png)
+
+## CORS Configuration
+![cors demo](img/cors-1.png)
+* We will create 2 s3 buckets and publish as static webside from PRoperties -> Satatic Website section
+    * bucket has to be publicly available
+    * load index, loadpage and error.html with public Read ACLs permission for both buckets
+    * then the second bucket which has loadpage.html needs to allow CORS thats why,
+      * we went  to Permission -> CORS enable and wrote that permission
+        ![Cors permission](img/cors-2.png)
