--- a/cloud-guru/developer-associate/s3.md
+++ b/cloud-guru/developer-associate/s3.md
@@ -223,10 +223,21 @@
 * ![Exam tips](img/s2-enc-3.png)
 
 ## CORS Configuration
+
 ![cors demo](img/cors-1.png)
+
 * We will create 2 s3 buckets and publish as static webside from PRoperties -> Satatic Website section
     * bucket has to be publicly available
     * load index, loadpage and error.html with public Read ACLs permission for both buckets
     * then the second bucket which has loadpage.html needs to allow CORS thats why,
-      * we went  to Permission -> CORS enable and wrote that permission
-        ![Cors permission](img/cors-2.png)
+        * we went to Permission -> CORS enable and wrote that permission
+          ![Cors permission](img/cors-2.png)
+* ![Result](img/cors-3.png)
+* Benefit:
+    * cross-origin resource sharing is a really good way to organize your website. For example, you could store image
+      files in one bucket, JavaScript in another bucket, and plain HTML in another,
+    * and then use cross-origin resource sharing to allow the resources from one bucket to access the resources in
+      another bucket.
+    * And remember by default resources in one bucket cannot access the resources in another, if universal access were
+      allowed, that would leave your resources open to attack and cause is the safe mechanism to allow controlled access
+      between one resource and another.
