Cloud Front CDN

--- a/cloud-guru/developer-associate/s3.md
+++ b/cloud-guru/developer-associate/s3.md
@@ -241,3 +241,68 @@
     * And remember by default resources in one bucket cannot access the resources in another, if universal access were
       allowed, that would leave your resources open to attack and cause is the safe mechanism to allow controlled access
       between one resource and another.
+
+## Overwiew CloudFront
+
+* It is Amazon's Content Delivery Network (CDN), which is a system of distributed servers which deliver web pages and
+  other web content
+* it's an easy, and cost-effective way to distribute content with low latency and high data-transfer speeds
+* this is all about making your web pages faster and CloudFront speeds up the distribution of your static and dynamic
+  web content. So HTML, JavaScript, image files, videos, and web applications
+* it's a much more efficient and performant way for geographically distributed users to access your content.
+* the network latency is going to be different for each different location. And for users who are further away, they are
+  going to experience greater latency and worse performance.
+    * So for example, users based in Australia, they might experience worse performance and greater latency. And they
+      might think that the website seems less responsive than users based, say in India, for example, which is
+      geographically closer to London.
+* with CloudFront, requests for your content are automatically routed to the nearest edge location. So content is
+  delivered with the best possible performance, no matter where your users are located in the world.
+* And this allows you to optimize performance for users accessing your website from all around the world.
+* CloudFront is optimized to work with other AWS services.
+    * So it's really well integrated with services like S3, EC2, elastic load balancer, and Route 53.
+* TTL (time to live)
+    * CloudFront, objects are cached and they are cached for a period of time,
+    * default TTL 1 day
+    * And when the TTL is up, the object is automatically cleared from the cache.
+    * you can clear an object from the cache yourself before the TTL is up, but you will be charged for doing that
+* how can we improve performance and make it more consistent for everybody. Well, this is where CloudFront comes in.
+* ![Summary](img/cdn-1.png)
+* CloudFrond Edge:
+    * and this is the location where the content is cached.
+    * And it's separate to an AWS region or availability zone.
+    * an edge location is simply a collection of servers which are in geographically-dispersed data centers.
+    * And these edge locations are used by CloudFront to keep a cache of copies of your objects
+    * this means that instead of requesting content from your server located in London for example, users can access
+      that content from the edge location instead, which is physically much closer to them than the main server in
+      London.
+    * the edge location forwards the request onto the server located in London and it downloads the files requested and
+      caches them locally.
+    * So this means that next time the user requests the file, or if another user comes along and wants to access the
+      same file, they can access directly from the edge location.
+    * it means that your requests are only going to the local edge location and they're not going all the way to London.
+    * edge locations are not just read only, and you can write to them as well.
+        * For example, you can put an object onto them as well. And this is exactly what's happening with S3 transfer
+          acceleration.
+* CloudFront origin:
+    * this is the origin of all the files that the distribution would serve.
+    * And this can be an S3 bucket, an EC2 instance, or an elastic load balancer, or route 53 address. And it can also
+      be your own server in your own data center.
+* CloudFront distribution (CDN):
+    * this is the name given to the origin and configuration settings for the content that you wish to distribute using
+      the CloudFront content delivery network.
+* ![CloudFront Consept](img/cdn-2.png)
+* S3 transfer acceleration:
+    * S3 transfer acceleration enables fast, easy, and secure transfers of files over long distances between your end
+      users and an S3 bucket.
+    * we can use CloudFront to accelerate the upload of files into S3.
+    * you upload your file to the edge location and when it arrives at the edge
+      location, it's routed to Amazon S3 over an optimized network path.
+        * We have our S3 bucket located here in London, and again,
+        * we've got our users geographically distributed,
+        * and just imagine all these users need to upload some files into this S3 bucket.
+        * So instead of uploading directly to the bucket in London, which could take a long time for some of these users
+          who are furthest away,
+          instead, they can upload their file into the CloudFront edge location.
+        * And from there, the edge location will transfer that file into the London-based bucket, using the fast
+          networks within AWS.
+    * ![S3 Transfer Accelerator](img/cdn-3.png)
