--- a/cloud-guru/developer-associate/s3.md
+++ b/cloud-guru/developer-associate/s3.md
@@ -306,3 +306,144 @@
         * And from there, the edge location will transfer that file into the London-based bucket, using the fast
           networks within AWS.
     * ![S3 Transfer Accelerator](img/cdn-3.png)
+* Origin Request Header: You can pass all header params through CloudFront to the origin.
+* Cache policy : You can define TTL on the Cloud Edge
+* Restrict viewer Access (Use only signed content or Cookie): This allows you to restrict the users to reach the content
+  with permission.
+* It has also WAF(Web Application Firewalls): This provides traffic filtering for well-known attack, like SQL injection
+  and Cross side.
+* In CloudFrond you can restrict countries by adding white/black lists
+* Invalidations are allows you to for example delete your old version cached images on CF cache without waiting.
+    * This is am manual and everytime you do you will charge money
+
+    * ![Cloud front Exam tips](img/cdn-4.png)
+* We can give Origin Access Identity:
+    * OAI is a special Cloudfront user that can access files in our bucket and serve them to users
+    * OAI allows us to restrict access to the contents of your bucket, so that all users must use the cloud front URL
+      instead of direct s3 bucket link.
+    * Scenario: Create a public S3 bucket
+        * Load image and make public Read ACL
+        * Create CloudFront
+        * Select OAI and create one
+        * And dont forget to override S3 bucket access rule checkbox
+        * Copy CloudFront link and image URl then you can reach
+        * Even you make your S3 bucket, still you can reach via Cloudfronf address, but not s3 buvcket address link,
+          because you let only access via Cloud Front link.
+* Understand Cloud frond Allowed Methods:
+    * When you create a Cloudfront distribution, you needs to choose which Http Methods your distribution will support.
+    * GET,HEAD: read only
+    * GET,HEAD,OPTIONS: read only
+    * GET,HEAD,OPTIONS, POST,PUT,DELETE,PATCH: read and write methods
+* ![http methods](img/cdn-5.png)
+* ![CF allowed methods](img/cdn-6.png)
+
+### Summary
+
+* S3 is object-based storage.
+    * it allows you to upload files and store them in AWS,
+    * it's a great place to store things like images, videos, code, text files, and documents, etc.
+    * However, it's not suitable to run an operating system or database from S3.
+    * Files can be up to 5 terabytes in size,
+    * and with S3, you get unlimited storage. So the total volume of data and the number of objects or files you can
+      store within S3 is unlimited.
+    * Files are stored in buckets and S3 has a universal namespace,
+    * so all bucket names must be unique.
+    * So we have the bucket name, followed by the region, followed by the key name or the object or file name.
+        * And in my example, I've got a bucket named fayecloudguru. It's located in us-east-1 and I have a file in there
+          named Ralphie.jpeg.
+    * And if you're using the CLI or the API, then successful uploads will generate an HTTP 200 status code.
+    * S3 objects consist of a key, which is the object name, for example, Ralphie.jpg;
+    * the value, which is the data itself, which is made up of a sequence of bytes.
+    * There's also a version ID, which allows you to store multiple versions of the same object;
+    * and also metadata, which is data about the data you're storing.
+        * For example, content type or last modified, etc.
+* storage classes or tiers.
+    * S3 Standard, which is suitable for most workloads.
+        * For example, websites, content distribution, mobile and gaming applications, and big data analytics.
+        * And this is great for frequently accessed data.
+        * So data that you're accessing on a daily basis.
+    * S3 Standard-Infrequent Access, which is long-term storage
+        * for infrequently accessed critical data.
+        * For example, backups or as a data store for disaster recovery files.
+    * S3 One Zone-Infrequent Access and this is great for long-term, infrequently accessed, non-critical data.
+        * And the data is stored redundantly, but only in one single Availability Zone.
+        * So that's why you only get 99.5% availability.
+        * So this is not suitable for critical data, like backups.
+    * Glacier Instant Retrieval, which is archiving for long-lived data
+        * that needs millisecond retrieval times,
+        * and Glacier is a cost-effective way to store your data,
+        * but you do pay a fee every time you access the data.
+    * Glacier Flexible Retrieval is for archiving data that needs to be accessed within a few hours or minutes.
+        * And Glacier Deep Archive is for rarely accessed data with a default retrieval time of 12 hours.
+    * S3 Intelligent-Tiering, designed for unpredictable access patterns
+        * and it will automatically move infrequently accessed data to a more cost-effective storage class to save you
+          money.
+
+* Security,
+    * S3 is secure by default.
+    * So by default, all newly created buckets are private.
+    * You can control access to your buckets using bucket policies, which are applied at a bucket-level
+    * access control lists, which are applied at an object-level and give you fine-grained access control.
+    * S3 buckets can be configured to create access logs, which log all the requests made to the S3 bucket. And these
+      logs can be written to another S3 bucket, but they are not enabled by default.
+
+* encryption,
+    * S3 supports encryption in transit using SSL or TLS. And this is all about encrypting your data as it travels over
+      the network.
+        * And we can use HTTPS to encrypt our data in transit.
+    * encryption at rest.
+        * And S3 supports 3 different types of server-side encryption.
+            * SSE-S3, which uses the Advanced Encryption Standard 256-bit.
+                * And this uses encryption keys, which are managed within S3.
+            * SSE-KMS, which uses encryption keys, which are managed within the AWS KMS service, or Key Management
+              Service.
+            * SSE-C, which uses encryption keys which are managed by the customer.
+    * client-side encryption as well.
+        * And this is where you encrypt the files yourself before you upload them into S3.
+    * enforce encryption using a bucket policy.
+        * it's really easy to enforce encryption within the AWS console by selecting Encryption in the bucket
+          configuration,
+        * but you can also use a bucket policy to deny all PUT requests which do not include the
+          x-amz-server-side-encryption parameter in the request header.
+        * you can also use a bucket policy to deny requests that do not use aws:SecureTransport in order to enforce the
+          use of HTTPS or SSL.
+
+* Cross-Origin Resource Sharing, or CORS.
+    * we used CORS to enable code in one S3 bucket to access code that was located in another S3 bucket.
+    * So allowing one resource to access another resource.
+    * So we configured one S3 bucket containing index.html and another bucket containing loadpage.html, and then we
+      configured CORS to allow the file in our first bucket to read the file in our second bucket.
+    * then when we accessed the website, then index.html is referencing loadpage.html and the website will display both
+      the files.
+
+* CloudFront,
+    * CloudFront is a service which allows you to improve the performance of your website by caching your webpages at a
+      local edge location.
+    * an edge location, this is the location where the content will be cached, which is separate to an AWS Region or
+      Availability Zone.
+    * The origin is the origin of all the files that the distribution is going to serve.
+        * And this can be an S3 bucket, an EC2 instance, Elastic Load Balancer, or Route53.
+        * And it can even be a server in your own data center.
+    * CloudFront distribution, which is the origin and configuration settings for the content that you wish to
+      distribute using the CloudFront CDN.
+    * edge locations are not just read-only. You can write to them as well. So you can PUT an object as well.
+    * S3 Transfer Acceleration utilizes CloudFront edge locations to reduce latency for S3 uploads.
+    * objects within CloudFront are cached for the Time to Live.
+        * by default, that's 1 day.
+        * However, if your website is changing more frequently than that, then you can clear cached objects;
+        * however, you will be charged for doing so.
+* CloudFront AllowedMethods defines the HTTP methods that your CloudFront configuration will support.
+    * there are 3 options to choose from.
+        * first 2, GET, HEAD and GET, HEAD, OPTIONS, are read-only,
+        * third choice, which includes PUT, POST, PATCH, and DELETE, allow your users to write data.
+
+![SS3-1](img/ss3-1.png)
+![SS3-2](img/ss3-2.png)
+![SS3-3](img/ss3-3.png)
+![SS3-4](img/ss3-4.png)
+![SS3-5](img/ss3-5.png)
+![SS3-6](img/ss3-6.png)
+![SS3-7](img/ss3-7.png)
+![SS3-8](img/ss3-8.png)
+![SS3-9](img/ss3-9.png)
+![SS3-10](img/ss3-10.png)
